cmake_minimum_required(VERSION 3.24)
project(sd247)

set(CMAKE_CXX_STANDARD 20)

add_executable(sd247 main.cpp labs/One/CircleArea.cpp labs/One/JobCandidate.cpp labs/One/JobCandidate.h labs/One/ArbitraryLimit.cpp labs/One/KeyboardArray.cpp labs/One/AddressValue.c labs/One/SwapValues.cpp labs/One/SwapValues.h labs/One/SixIntegers.c labs/One/SixIntegers.h labs/One/labOneMain.cpp labs/One/KeyboardArray.h labs/One/ArbitraryLimit.h labs/One/AddressValue.h utils/helpers.cpp utils/helpers.h)
